# i3

./: README.md  bkpconfig  config  config_i3_xfce.sh  i3blocks.conf  i3status  install.sh  packages  pyproject.toml  quickstart.sh  quickstart_i3_xfce.sh  requirnments.sh  setup.yml
dotstation/: __init__.py  cli.py  constants.py  utils.py
dotstation/commands/: __init__.py  backup.py  deploy.py  init.py  install.py  restore.py  status.py  sync.py
fonts/: .uuid
fonts/Terminus/: .uuid
fonts/droid-sans/: .uuid
fonts/fontawesome-free-6.2.1-desktop/: .uuid
fonts/fontawesome-free-6.2.1-desktop/metadata/: .uuid
fonts/fontawesome-free-6.2.1-desktop/otfs/: .uuid
fonts/fontawesome-free-6.2.1-desktop/svgs/: .uuid
fonts/fontawesome-free-6.2.1-desktop/svgs/brands/: .uuid
fonts/fontawesome-free-6.2.1-desktop/svgs/regular/: .uuid
fonts/fontawesome-free-6.2.1-desktop/svgs/solid/: .uuid
i3/: battery_notify.sh  config  config.backup  lock.sh  packages  screencast.sh
i3_2024/: config
i3blocks/: docker  vpn
polybar/: battery.sh  bluetooth.sh  check-vpn.sh  config.ini  launch.sh  powermenu.sh  reload_polybar.sh  settings.sh
