[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotstation"
version = "0.1.0"
description = "Personal workstation setup, backup, and restore CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
dotstation = "dotstation.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["dotstation"]
